video appears blank with only audio playing if video element isn't appended to the dom tree https://bugs.webkit.org/show_bug.cgi?id=232124 rdar://83438282

Reviewed by Eric Carlson.

Source/WebCore:

If the renderer isn't accelerated, the current playback policity is to
not have the video tracks visible on screen.
The HTMLMediaElement could only check if the renderer was accelerated if
it was part of the DOM.
On iPhone, for historical reasons, inline playback isn't allowed but
will play fullscreen instead.

This is a temporary workaround until bug 232125 is comlpeted which would provide
a more elegant and universal solution.

Test: media/video-element-fullscreen-not-in-dom-accelerated-iphone.html

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::mediaPlayerRenderingCanBeAccelerated):
* html/HTMLMediaElement.h:
* testing/Internals.cpp:
(WebCore::Internals::mediaPlayerRenderingCanBeAccelerated):
* testing/Internals.h:
* testing/Internals.idl:

Source/WebKit:

Ensure that we inform the GPU process whenever
MediaPlayer::renderingCanBeAccelerated value could have changed.

* WebProcess/GPU/media/MediaPlayerPrivateRemote.cpp:
(WebKit::MediaPlayerPrivateRemote::load):
(WebKit::MediaPlayerPrivateRemote::readyStateChanged):
(WebKit::MediaPlayerPrivateRemote::checkAcceleratedRenderingState):
(WebKit::MediaPlayerPrivateRemote::updateConfiguration):
(WebKit::MediaPlayerPrivateRemote::setVideoFullscreenLayer):
(WebKit::MediaPlayerPrivateRemote::setVideoFullscreenGravity):
* WebProcess/GPU/media/MediaPlayerPrivateRemote.h:

LayoutTests:

* TestExpectations:
* media/remove-video-element-in-pip-from-document-expected.txt:
* media/remove-video-element-in-pip-from-document.html: update test to improve coverage.
* media/video-element-fullscreen-not-in-dom-accelerated-iphone-expected.txt: Added.
* media/video-element-fullscreen-not-in-dom-accelerated-iphone.html: Added.
* platform/ios/TestExpectations:
* platform/ipad/TestExpectations:


Canonical link: https://commits.webkit.org/243450@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284741 268f45cc-cd09-0410-ab3c-d52691b4dbfc