Source/WebCore/html/HTMLMediaElement.h
@@ -603,6 +603,8 @@ public:
     using EventTarget::dispatchEvent;
     void dispatchEvent(Event&) override;
 
+    WEBCORE_EXPORT bool mediaPlayerRenderingCanBeAccelerated() final;
+
 protected:
     HTMLMediaElement(const QualifiedName&, Document&, bool createdByParser);
     virtual ~HTMLMediaElement();
@@ -688,7 +690,6 @@ private:
     void mediaPlayerResourceNotSupported() final;
     void mediaPlayerRepaint() final;
     void mediaPlayerSizeChanged() final;
-    bool mediaPlayerRenderingCanBeAccelerated() final;
     void mediaPlayerRenderingModeChanged() final;
     bool mediaPlayerAcceleratedCompositingEnabled() final;
     void mediaPlayerEngineUpdated() final;
